refactor: change interface signature of redis cache service
