# src/Services/Trend/Trend.Application/Interfaces/Models/Dtos/SearchWordSyncDetailResDto.cs
@@ -1,6 +1,6 @@
-namespace Trend.Application.Interfaces.Models.Repositories;
+namespace Trend.Application.Interfaces.Models.Dtos;
 
-public class SearchWordSyncDetailResQuery
+public class SearchWordSyncDetailResDto
 {
     public string WordId { get; set; }
     public int Count { get; set; }
