# src/Tools/Refitter.Generator/OpenApi/swagger.json
@@ -640,6 +640,66 @@
         }
       }
     },
+    "/api/v1/SearchWord/GetSearchWordSyncStatistic/{wordId}": {
+      "get": {
+        "tags": [
+          "SearchWord"
+        ],
+        "operationId": "GetSearchWordSyncStatistic",
+        "parameters": [
+          {
+            "name": "wordId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/SearchWordSyncDetailResDto"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SearchWordSyncDetailResDto"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SearchWordSyncDetailResDto"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponseModel"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponseModel"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponseModel"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/v1/SearchWord/GetActiveSearchWords": {
       "get": {
         "tags": [
@@ -1545,6 +1605,24 @@
               "$ref": "#/components/schemas/SearchWordResDto"
             },
             "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "SearchWordSyncDetailResDto": {
+        "type": "object",
+        "properties": {
+          "wordId": {
+            "type": "string",
+            "nullable": true
+          },
+          "count": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "totalCount": {
+            "type": "integer",
+            "format": "int64"
           }
         },
         "additionalProperties": false
